# xlog

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  build-pypi-linux.sh  kmpkg-configuration.json  kmpkg.json  release-pypi-linux.sh  setup.py
.github/workflows/: ci.yml  windows.yml
benchmark/: CMakeLists.txt  async_bench.cc  bench.cc  config.h  config.h.in  formatter-bench.cc  latency.cc  log_bench.cc
cmake/: xlog_config.cmake.in  xlog_cpack_config.cmake  xlog_cxx_config.cmake  xlog_deps.cmake  xlog_test.cmake
docs/: AI.md  AI_UPGRADE.md  logging.md  logging_CN.md
examples/: CMakeLists.txt  demo.cc  demo_1.cc  demo_upstream_absl.cc  demo_upstream_glog.cc  demo_upstream_turbo.cc  foo_ex.cc  upstream_demo_util.h
kmcmake/: kmcmake_module.cmake  kmcmake_option.cmake
kmcmake/arch/: kmcmake_arch.cmake
kmcmake/arch/arm/: kmcmake_arch_detect.cmake  kmcmake_arch_level.cmake
kmcmake/arch/x86/: kmcmake_arch_detect.cmake
kmcmake/package/: CPack.STGZ_Header.sh.in
kmcmake/tools/: default_setting.cmake  git_commit.cmake  kmcmake_cc_benchmark.cmake  kmcmake_cc_binary.cmake  kmcmake_cc_interface.cmake  kmcmake_cc_library.cmake  kmcmake_cc_object.cmake  kmcmake_cc_proto.cmake  kmcmake_cc_test.cmake  kmcmake_compiler_flags.cmake  simd_detect.cmake
tests/: CMakeLists.txt  check_test.cc  config.h.in  doctest.h  fnmatch_test.cc  foo_doctest.cc  foo_test.cc  includes.h  log_api_extension_test.cc  log_basic_test.cc  log_conditions_test.cc  log_format_test.cc  log_modifier_methods_test.cc  log_sink_file_test.cc  log_sink_test.cc  max_vlog_verbosity_test.cc  min_log_level_test.cc  scoped_mock_log.cc  scoped_mock_log.h  scoped_mock_log_test.cc  stderr_threshold_test.cc  strerror_test.cc  strip_log_test.cc  test_async.cpp  test_backtrace.cpp  test_bin_to_hex.cpp  test_cfg.cpp  test_circular_q.cpp  test_create_dir.cpp  test_custom_callbacks.cpp  test_daily_logger.cpp  test_dup_filter.cpp  test_errors.cpp  test_eventlog.cpp  test_file_helper.cpp  test_file_logging.cpp  test_fmt_helper.cpp  test_helpers.cc  test_helpers.h  test_macros.cpp  (+16 more)
xlog/: CMakeLists.txt  async.cc  async.h  async_logger-inl.h  async_logger.h  bundled_fmtlib_format.cc  cfg.cc  check.h  color_sinks.cc  common-inl.h  common.h  file_sinks.cc  format.cc  format.h  formatter.h  fwd.h  initialize.cc  initialize.h  log_entry.cc  log_entry.h  log_setting.h  log_severity.cc  log_severity.h  log_sink.cc  log_sink.h  log_sink_set.cc  log_sink_set.h  logger-inl.h  logger.cc  logger.h  logging.cc  logging.h  mdc.h  pattern_formatter-inl.h  pattern_formatter.h  setup.cc  setup.h  skills.h  stdout_sinks.cc  stopwatch.h  (+10 more)
xlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
xlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h
xlog/fmt/: bin_to_hex.h  chrono.h  compile.h  fmt.h  ostr.h  ranges.h  std.h  xchar.h
xlog/internal/: append_file.cc  append_file.h  check_impl.h  check_op.cc  check_op.h  conditions.cc  conditions.h  export.h  fnmatch.cc  fnmatch.h  fs_helper.cc  fs_helper.h  log_impl.h  log_message.cc  log_message.h  log_sink_set.cc  log_sink_set.h  no_destructor.h  nullstream.h  platform.h  strerror.cc  strerror.h  strip.h  voidify.h
xlog/sinks/: android_log_sink.cc  android_log_sink.h  android_sink.h  ansi_color_sink.cc  ansi_color_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  callback_sink.h  daily_file_sink.cc  daily_file_sink.h  default_sink.cc  default_sink.h  dist_sink.h  dup_filter_sink.h  format_only_sink_set.cc  format_only_sink_set.h  hourly_file_sink.cc  hourly_file_sink.h  kafka_sink.h  log_filename.cc  log_filename.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.cc  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  (+9 more)
xlog/upstream/: absl.h  common.h  glog.h  turbo.h
